Parser with pub/sub

--- a/redis-client/Makefile
+++ b/redis-client/Makefile
@@ -27,7 +27,7 @@ $(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp | $(BUILD_DIR)
 
 # Link the object files to create the executable
 $(TARGET): $(OBJS) | $(BIN_DIR)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET) -lreadline -lncurses
 
 # Clean build artifacts
 clean:
